Added production frontend url to cors